Added LoadProject window

--- a/AGL/AGL.csproj
+++ b/AGL/AGL.csproj
@@ -58,8 +58,15 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="LoadProject.xaml.cs">
+      <DependentUpon>LoadProject.xaml</DependentUpon>
+    </Compile>
     <Compile Include="PasserelleA.cs" />
     <Compile Include="WordDocumentWriter.cs" />
+    <Page Include="LoadProject.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
