--- a/AGL/AGL.csproj
+++ b/AGL/AGL.csproj
@@ -63,6 +63,9 @@
     </Compile>
     <Compile Include="PasserelleA.cs" />
     <Compile Include="PasserelleB.cs" />
+    <Compile Include="StartUpWindow.xaml.cs">
+      <DependentUpon>StartUpWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="WordDocumentWriter.cs" />
     <Page Include="LoadProject.xaml">
       <SubType>Designer</SubType>
@@ -80,6 +83,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="StartUpWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
